# curso-ia

./: .gitignore
01-Claude-Code-Deep-Dive/: sesion-01-claude-code.html
01-Claude-Code-Deep-Dive/messy-task-app/: .env  CLAUDE.md  package.json  server.js  tasks.json
01-Claude-Code-Deep-Dive/messy-task-app/public/: index.html
01-Claude-Code-Deep-Dive/messy-task-app/public/locales/: en.json  es.json  pt.json
02-Agentes-Y-Prompt-Engineering/: langchain_agents_tutorial.ipynb
02-Agentes-Y-Prompt-Engineering/practica-campus-agent/: .env.example  .gitignore  CLAUDE.md  README.md  campus_data.json  pyproject.toml
02-Agentes-Y-Prompt-Engineering/practica-campus-agent/.claude/: README.md  settings.local.json
02-Agentes-Y-Prompt-Engineering/practica-campus-agent/src/campus_agent/: __init__.py  agent.py  cli.py  data_store.py  models.py  tools.py
02-Agentes-Y-Prompt-Engineering/practica-campus-agent/tests/: test_data_store.py  test_initial_agent.py
