[project]
name = "practica-campus-agent"
version = "0.1.0"
description = "Practica base para construir un agente de Campus con tools, permisos y memoria."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0.0",
    "langchain-ollama>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/campus_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
